<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.bsotniczuk.safekiddoapp.MessageActivity">
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="100"
        android:title="@string/edit"
        android:icon="@drawable/ic_baseline_edit_24"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_done"
        android:orderInCategory="100"
        android:title="@string/done"
        android:icon="@drawable/ic_baseline_done_outline_24"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item
        android:id="@+id/action_clear"
        android:orderInCategory="100"
        android:title="@string/clear"
        android:icon="@drawable/ic_baseline_clear_24"
        app:showAsAction="ifRoom"
        android:visible="false"/>
</menu>