<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.bsotniczuk.safekiddoapp.MainActivity">
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_baseline_add_circle_24"
        android:orderInCategory="100"
        android:title="@string/add"
        app:showAsAction="ifRoom" />
</menu>