...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MessageActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple_safekiddo_500"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white" />

...
                android:textSize="20dp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/textView1Message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textAlignment="center"
                android:textSize="20dp"
...
